--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@ code {
     IMPORT FILES
 -------------------------------------------------------------------*/
 
-@import url(css/animate.css);
+/* @import url(css/animate.css); */
 @import url(css/animate.min.css);
 @import url(css/bootstrap-touch-slider.css);
 @import url(css/bootstrap.min.css);
@@ -28,11 +28,13 @@ code {
 @import url(css/custom.css);
 @import url(css/flaticon.css);
 @import url(css/font-awesome.css);
+@import url(css/font-awesome.min.css);
 @import url(css/timeline.min.css);
 @import url(css/prettyPhoto.css);
 @import url(css/owl.carousel.css);
 @import url(css/font-awesome.min.css);
 @import url(css/pr_loading.css);
+@import url(css/versions.css);
 @import url(css/responsive.css);
 
 /*------------------------------------------------------------------
@@ -748,7 +750,8 @@ a img.aligncenter {
 }
 
 .box-slider {
-    height: 100%;
+    /* height: 100%; */
+    height: 800px;
 }
 
 .box-slider .carousel-control-prev {
